# map4d

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
assets/: PIT_1100_-50_1220_150_transforms.json  PIT_1100_-50_1220_150_transforms.pkl  PIT_6180_1620_6310_1780_transforms.json  PIT_6180_1620_6310_1780_transforms.pkl  semantic_prior.ckpt  waymo_train_list.txt
docs/: Argoverse2.md  DOCS.md
docs/datasets/: Argoverse2.md  KITTI.md  VKITTI2.md  Waymo.md
docs/models/: 4DGF.md  MLNSG.md
src/map4d/cameras/: camera_optimizer.py
src/map4d/common/: distributed.py  geometry.py  io.py  metric.py  parallel.py  pointcloud.py  visualize.py
src/map4d/config/: __init__.py  gauss_splat.py  scene_graph.py
src/map4d/cuda/: __init__.py
src/map4d/cuda/src/: ray_box_intersect.cpp  ray_box_intersect_kernel.cu  video_embedding.cpp  video_embedding_kernel.cu
src/map4d/data/: datamanager.py  dataset.py  pixel_sampler.py
src/map4d/data/parser/: base.py  typing.py  util.py
src/map4d/engine/: optimizer.py  trainer.py  util.py
src/map4d/model/: gauss_splat.py  scene_graph.py  util.py
src/map4d/model/controller/: density_control.py
src/map4d/model/field/: density_field.py  dynamic_field.py  static_field.py
src/map4d/model/gaussian_field/: base.py  dynamic.py  static.py  util.py
src/map4d/model/loss/: entropy.py
src/map4d/model/sampler/: composite_proposal_sampler.py
src/map4d/model/struct/: gaussians.py
src/map4d/pipeline/: pipeline.py
src/map4d/scripts/: process_data.py  render.py  run_checks.py  util.py  visualize_data.py
src/map4d/scripts/datasets/: argoverse2.py  kitti.py  util.py  vkitti2.py  waymo.py
tests/: metric_test.py  model_util_test.py  ray_box_intersect_test.py
